# dashlauncher

./: .clang-format  CMakeLists.txt  GEMINI.md  Makefile  README.md  compile_flags.txt  dash  main.c  main.cpp  run.sh  string.cpp  string.hpp  x11_example
docs/: TODO_ARCH.md  dmenu.md
include/: args.hpp  fzf.hpp  loop.hpp  string.hpp  utilities.hpp  window.hpp  xwindow.hpp
src/: args.cpp  fzf.cpp  loop.cpp  main.cpp  utilities.cpp  window.cpp  xwindow.cpp
